# RNN

./: .gitignore  CMakeLists.txt  README.md  test.py
include/: rnn.h
pytorch_binding/: setup.py
pytorch_binding/intelrnn_pytorch/: __init__.py
pytorch_binding/src/: .binding.cpp.swp  binding.cpp  binding.h
src/: rnn_entrypoint.cpp
tests/: test_cpu.cpp
